# helple

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  mix.exs
.githooks/: pre-commit
.github/workflows/: check_and_lint.yml  deploy.yml
assets/: tailwind.config.js  webpack.config.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: helple.ex  helple_web.ex  wordle_companion.ex  wordle_companion_web.ex
lib/helple/: application.ex  rust_solver.ex
lib/helple_web/: endpoint.ex  router.ex  telemetry.ex  ui.ex
lib/helple_web/live/: remainingwords.ex
lib/helple_web/templates/layout/: live.html.heex  root.html.heex
lib/helple_web/views/: error_view.ex  layout_view.ex  page_view.ex
lib/wordle_companion/: application.ex  rust_solver.ex
lib/wordle_companion_web/: endpoint.ex  router.ex  telemetry.ex  ui.ex
lib/wordle_companion_web/controllers/: page_controller.ex
lib/wordle_companion_web/live/: counter.ex  remainingwords.ex  stats.ex
lib/wordle_companion_web/views/: error_view.ex  layout_view.ex  page_view.ex
native/rustsolver/: Cargo.toml  README.md
native/rustsolver/benches/: bench_remaining.rs
native/rustsolver/src/: lib.rs  solver.rs  stats.rs
priv/static/assets/: words.txt
priv/static/files/: site.webmanifest
test/helple_web/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
test/support/: channel_case.ex  conn_case.ex
test/wordle_companion_web/controllers/: page_controller_test.exs
test/wordle_companion_web/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
(+8 files in other folders)
