[package]
name = "rustsolver"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "rustsolver"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
rustler = "0.23.0"
lazy_static = "1.4.0"
itertools = "0.10.3"

[dev-dependencies]
criterion = "0.3.5"

[profile.release]
debug = true

[[bench]]
name = "bench_remaining"
harness = false

[dependencies.rand]
version = "0.8.5"
features = ["alloc"]
